[gd_scene load_steps=11 format=3 uid="uid://cwfkdmyy53qiv"]

[ext_resource type="Texture2D" uid="uid://o5qgwor5qhaq" path="res://Assets/sentinel/sentinel.png" id="1_cuxs6"]
[ext_resource type="Script" uid="uid://cciq2qkl606er" path="res://Scenes/Sentinel/sentinel.gd" id="1_u3sj5"]
[ext_resource type="Script" uid="uid://bgmb176xk2uel" path="res://Scenes/state_machine.gd" id="2_51je0"]
[ext_resource type="Script" uid="uid://kppqgyoriqpr" path="res://Scenes/Sentinel/Sentinel State Machine/sentinel-idle.gd" id="3_4wiga"]
[ext_resource type="Script" uid="uid://b133q8oyn8jv0" path="res://Scenes/Sentinel/Sentinel State Machine/sentinel-fall.gd" id="4_omg0t"]
[ext_resource type="Script" uid="uid://cj7gb6cg4sjk4" path="res://Scenes/Sentinel/Sentinel State Machine/sentinel-attack.gd" id="5_mvde5"]
[ext_resource type="Script" uid="uid://bss8ujiwobpsd" path="res://Scenes/Sentinel/Sentinel State Machine/sentinel-patrol.gd" id="5_wv7bl"]
[ext_resource type="Script" uid="uid://ck21gc5448rjd" path="res://Scenes/Sentinel/Sentinel State Machine/sentinel-chase.gd" id="6_jaqww"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3sj5"]
size = Vector2(140, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51je0"]
size = Vector2(64, 64)

[node name="Sentinel" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 6
script = ExtResource("1_u3sj5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("1_cuxs6")

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_u3sj5")
debug_color = Color(0.702837, 0.272691, 1, 0.42)

[node name="IdleTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_51je0")

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(33, 1)
target_position = Vector2(0, 8)
collision_mask = 6
hit_from_inside = true

[node name="PlayerCheck" type="RayCast2D" parent="."]
position = Vector2(0, -32)
target_position = Vector2(500, 0)

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_51je0")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "attack_state", "patrol_state", "chase_state", "idle_timer", "player_check")]
script = ExtResource("3_4wiga")
fall_state = NodePath("../Fall")
attack_state = NodePath("../Attack")
patrol_state = NodePath("../Patrol")
chase_state = NodePath("../Chase")
idle_timer = NodePath("../../IdleTimer")
player_check = NodePath("../../PlayerCheck")
detection_range = 1000.0

[node name="Patrol" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "chase_state", "attack_state", "idle_state", "ground_check", "player_check")]
script = ExtResource("5_wv7bl")
fall_state = NodePath("../Fall")
chase_state = NodePath("../Chase")
attack_state = NodePath("../Attack")
idle_state = NodePath("../Idle")
ground_check = NodePath("../../GroundCheck")
player_check = NodePath("../../PlayerCheck")

[node name="Chase" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "attack_state", "idle_state", "patrol_state", "ground_check", "player_check")]
script = ExtResource("6_jaqww")
fall_state = NodePath("../Fall")
attack_state = NodePath("../Attack")
idle_state = NodePath("../Idle")
patrol_state = NodePath("../Patrol")
ground_check = NodePath("../../GroundCheck")
player_check = NodePath("../../PlayerCheck")

[node name="Attack" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("5_mvde5")
idle_state = NodePath("../Idle")

[node name="Fall" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("4_omg0t")
idle_state = NodePath("../Idle")

[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
[connection signal="timeout" from="IdleTimer" to="state_machine/Idle" method="_on_idle_timer_timeout"]
